Divided Docker file in 2 stages