@@ -1,7 +1,21 @@
-FROM maven:3.5-jdk-8-alpine
+# our base build image
+FROM maven:3.5-jdk-8 as maven
 
-# COPY target/ouidb-to-json-publisher-jar-with-dependencies.jar /
-ADD . /src
-RUN cd src && mvn clean package && mv target/ouidb-to-json-publisher-jar-with-dependencies.jar / && rm -rf /root/.m2
+# copy the project files
+COPY ./pom.xml ./pom.xml
 
-ENTRYPOINT ["sh", "-c", "java -jar /ouidb-to-json-publisher-jar-with-dependencies.jar '/var/data' \"${REPO_URL}\" \"${REPO_USERNAME}\" \"${REPO_PASSWORD}\""]
+# build all dependencies
+RUN dock:go-offline -B
+
+# copy your other files
+COPY ./src ./src
+
+# build for release
+RUN mvn clean package
+
+# our final base image
+FROM openjdk:8-jre-alpine
+
+COPY --from=maven target/ouidb-to-json-publisher-jar-with-dependencies.jar /
+
+ENTRYPOINT ["sh", "-c", "java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -jar /ouidb-to-json-publisher-jar-with-dependencies.jar '/var/data' \"${REPO_URL}\" \"${REPO_USERNAME}\" \"${REPO_PASSWORD}\""]
